version 1.8.8, in progress
- New command: "negbin", for estimation of count data
  models using the Negative Binomial distribution
- poisson regression: add overdispersion test and also
  --robust option to get a QML covariance matrix
- New command modifier, "catch" to catch errors and
  permit contination of script execution
- Enable full-text search of "online" help files
- Enable help for specific "settable" variables, as in
  "help set lbfgs"
- "mread": search the gretl working directory if the
  file is not found at first
- ODBC import: enable extraction of multiple data series
  per SQL query
- Export of data to R, interactively: add a message
  confirming that the export worked
- "foreign" code blocks: add support for GNU Octave
- GUI: add export/import of variable labels
- Filter functions movavg, bkfilt and hpfilt: offer
  greater control via additional optional arguments
- Add new functions, digamma(), kdensity()
- Add new built-in constant: "macheps" gets the
  machine precision
- OS X package: add icons and associations for gretl data,
  script and session files
- Fix bug: errors in Exponential Moving Average in GUI
- Fix bug: non-ASCII characters not handled in function
  package upload to server
- Fix bug: double normal cdf did not handle correctly some 
  corner cases
- Fix bugs 2944000, 2956109
- Fix font-encoding issues on MS Windows: session-names
  with non-ASCII characters were not appearing in the gretl
  title bar; and the encoding was getting broken between
  copy and paste, e.g. in script windows

01/24/2010 version 1.8.7
- GUI enhancement: add apparatus to help keep track of
  gretl windows
- GUI menus: clean-up and consolidation
- New command: "qqplot" (Quantile-Quantile plots)
- Normal random samples: implement the Ziggurat method
- "dataset" command: document the "clear" keyword
- "rmplot" command: save $test and $pvalue
- "restrict" with --bootstrap option: record $test and
  $pvalue
- "corrgm" and "xcorrgm": allow the lag order to be