@@ -75,7 +75,6 @@ static struct gretl_cmd gretl_cmds[] = {
     { GENR,     "genr" },  
     { GMM,      "gmm" },
     { GNUPLOT,  "gnuplot" },  
-    { GRAPH,    "graph" }, 
     { GRAPHPG,  "graphpg" }, 
     { HAUSMAN,  "hausman" },
     { HECKIT,   "heckit" },
@@ -116,7 +115,7 @@ static struct gretl_cmd gretl_cmds[] = {
     { PANEL,    "panel" },
     { PCA,      "pca" },
     { PERGM,    "pergm" },
-    { PLOT,     "plot" },    
+    { PLOT,     "textplot" },    
     { POISSON,  "poisson" },
     { PRINT,    "print" }, 
     { PRINTF,   "printf" },
