@@ -180,7 +180,6 @@ struct gretl_option gretl_opts[] = {
     { GNUPLOT,  OPT_U, "output", 2 },
     { GNUPLOT,  OPT_Y, "single-yaxis", 0 },
     { GNUPLOT,  OPT_X, "matrix", 2 },
-    { GRAPH,    OPT_O, "tall", 0 },
     { HECKIT,   OPT_M, "ml", 0 },
     { HECKIT,   OPT_T, "two-step", 0 },
     { HECKIT,   OPT_V, "verbose", 0 },
@@ -306,6 +305,8 @@ struct gretl_option gretl_opts[] = {
     { PERGM,    OPT_O, "bartlett", 0 },
     { PERGM,    OPT_L, "log", 0 },
     { PLOT,     OPT_O, "one-scale", 0 },
+    { PLOT,     OPT_S, "time-series", 0 },
+    { PLOT,     OPT_T, "tall", 0 },
     { PRINT,    OPT_O, "byobs", 0 },
     { PRINT,    OPT_N, "no-dates", 0 },
     { PROBIT,   OPT_P, "p-values", 0 },
