@@ -1,10 +1,14 @@
 version 1.8.8, in progress
+- New command: "duration", for estimation of parametric
+  duration models (e.g. Weibull)
 - New command: "negbin", for estimation of count data
   models using the Negative Binomial distribution
 - poisson regression: add overdispersion test and also
   --robust option to get a QML covariance matrix
 - New command modifier, "catch" to catch errors and
   permit contination of script execution
+- Consolidate commands: the old "graph" and "plot"
+  commands (ASCII graphics) are unified in "textplot"
 - Enable full-text search of "online" help files
 - Enable help for specific "settable" variables, as in
   "help set lbfgs"
